# silent-speech-interpretability

./: .gitignore  AI_README.md  Makefile  README.md  metadata_mouths.csv  mouth_cnn_label_map.json  mouth_cnn_model_36class_results.json  mouth_cnn_model_results.json  pyproject.toml  uwb_label_map.json
configs/: __init__.py  defaults.yaml  interp.yaml  modalities.yaml  paths.yaml  teachers.yaml  training.yaml
extra/: mouth_cnn_model_36class_results.json
metadata/: rvtall_audio_prompt_cohorts.csv  rvtall_prompt_map.csv  rvtall_pronunciation_lexicon.csv
notebooks/: align_help_run.py  dataset_png_sequence.py  extraction_experiment.py  fusionE2E.py  fusionGate.py  fusionMLP.py  laserLSTMCNN.py  liplandmarkLSTM.py  liplandmarkLSTM_v2.py  liplandmarkfeatureextraction.py  make_poster_figures.py  mouthCNNencoder.py  mouthCNNencoder_36class.py  mouthCNNencoder_words.py  notes.md  project_overview.md  radarCNNLSTM.py  run_pipeline.sh  streamlinedliplandmarkfeatureextraction.py  uwbLSTMCNN.py  uwbLSTMCNN_v2.py  uwb_encoder.py  video_word_classifier.py  video_word_embeddings.py
olderfiles/: extract_audio.py  test_png_sequence.py  video_word_classifier.py  video_word_classifier2.py  video_word_embeddings.py
reports/: audio_manifest_audit.md  audio_teacher_comparison.md  audio_teacher_student_scaffold.md  baseline_report.md  evaluation_sanity_audit.md  hubert_bottleneck_feature_causality.md  hubert_interpretability_summary.md  hubert_modality_attribution.md  hubert_sparse_feature_exemplars.md  hubert_student_probes.md  hubert_teacher_extraction.md  hubert_teacher_student_cv.md  (+18 more)
(+127 files in other folders)
